--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "btoa": "^1.2.1",
     "express": "^4.17.1",
+    "joi": "^17.2.1",
     "moment": "^2.27.0",
     "request": "^2.88.2"
   },
