--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "btoa": "^1.2.1",
     "express": "^4.17.1",
     "joi": "^17.2.1",
+    "mocha": "^8.1.3",
     "moment": "^2.27.0",
     "request": "^2.88.2"
   },
