--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "joi": "^17.2.1",
     "mocha": "^8.1.3",
     "moment": "^2.27.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "timekeeper": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
