--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RESTful APIs for TuneUp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require @babel/register --recursive"
   },
   "keywords": [],
   "author": "masonc08",
@@ -27,7 +27,9 @@
     "timekeeper": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
     "@babel/core": "^7.8.7",
+    "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.0",
     "@babel/register": "^7.8.6",
     "babel-plugin-root-import": "^6.4.1"
