--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mocha": "^8.1.3",
     "moment": "^2.27.0",
     "request": "^2.88.2",
+    "test-console": "^1.1.0",
     "timekeeper": "^2.2.0"
   },
   "devDependencies": {
