--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "RESTful APIs for TuneUp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require @babel/register --recursive",
+    "start": "nodemon start"
   },
   "keywords": [],
   "author": "masonc08",
@@ -21,11 +22,16 @@
     "btoa": "^1.2.1",
     "express": "^4.17.1",
     "joi": "^17.2.1",
+    "mocha": "^8.1.3",
     "moment": "^2.27.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "test-console": "^1.1.0",
+    "timekeeper": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
     "@babel/core": "^7.8.7",
+    "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.0",
     "@babel/register": "^7.8.6",
     "babel-plugin-root-import": "^6.4.1"
