--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mocha": "^8.1.3",
     "moment": "^2.27.0",
     "request": "^2.88.2",
+    "sinon": "^9.0.3",
     "test-console": "^1.1.0",
     "timekeeper": "^2.2.0"
   },
